--- a/environment-promotion/test/applicationset.yaml
+++ b/environment-promotion/test/applicationset.yaml
@@ -4,15 +4,11 @@ metadata:
   name: cluster-git
 spec:
   generators:
-    # matrix 'parent' generator
-    - matrix:
-        generators:
-          # git generator, 'child' #1
-          - git:
-              repoURL: https://github.com/zaniso/gitops-cert-level-2-examples.git
-              revision: HEAD
-              directories:
-                - path: environment-promotion/envs/*
+    - git:
+        repoURL: https://github.com/zaniso/gitops-cert-level-2-examples.git
+        revision: HEAD
+        directories:
+          - path: environment-promotion/envs/*
   template:
     metadata:
       name: '{{path.basename}}'
@@ -23,7 +19,7 @@ spec:
         targetRevision: HEAD
         path: '{{path}}'
       destination:
-        server: '{{server}}'
+        server: 'https://kubernetes.default.svc'
         namespace: '{{path.basename}}'
       syncPolicy:
         syncOptions:
